fix: Move hint to bottom of the screen to make up for covering goal

--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,7 @@ canvas {
 }
 
 #hint {
-  bottom: 20%;
+  bottom: 5%;
   position: absolute;
   white-space: pre-wrap;
   text-align: center;
